--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": " ",
   "license": "ISC",
   "dependencies": {
+    "@styled/modern-normalize": "^1.0.1",
     "body": "^5.1.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "skroll": "^1.4.3",
